style: fix text spacing of 'old version' badge

--- a/src/ui/files/_all.scss
+++ b/src/ui/files/_all.scss
@@ -88,6 +88,7 @@
       margin-left: auto;
       font-size: 11px;
       font-weight: $font-weight-semibold;
+      white-space: nowrap;
       color: rgba(255, 255, 255, .87);
       background-color: $icon-dark-active;
       border-radius: 5px;
